minor fix：調整back to top位置、手機版overflow-x問題

--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
   font-size: 1.2rem;
   letter-spacing: 0.1rem;
   max-width: 100%;
+  overflow-x: hidden;
 }
 
 /* Title Font */
